fixed user var uniform issue

--- a/index.html
+++ b/index.html
@@ -26,8 +26,7 @@
           </p>
           <p class="equals">=</p>
           <p class="equation-entry">
-            <!-- <span id="fz">z^2+\cos\left(t\right)+i\sin\left(t\right)</span> -->
-            <span id="fz">z^2</span>
+            <span id="fz">z^2+\cos\left(t\right)+i\sin\left(t\right)</span>
           </p>
         </div>
 
