--- a/index.html
+++ b/index.html
@@ -97,13 +97,16 @@
   </head>
   <body>
     <div class="main-container">
-      <div class="side-panel">
+      <div id="side-panel">
         <div class="title">
           <h1>Fractal Desmos</h1>
           <p><a href="https://github.com/tvumcc/fractal-desmos" target="_blank"><img width="30" height="30" src="./assets/github.png"></a></p>
         </div>
         <div id="info">
-          <h2>How To Use</h2>
+          <div class="section-header">
+            <button class="collapse-button" name="how-to-use">▶</button>
+            <h2>How To Use</h2>
+          </div>
           <div id="how-to-use">
             <p>
               Enter in your own equations for an 
@@ -119,14 +122,20 @@
               will appear as sliders.              
             </p>
           </div>
-          <h2>Controls</h2>
+          <div class="section-header">
+            <button class="collapse-button" name="controls">▶</button>
+            <h2>Controls</h2>
+          </div>
           <div id="controls">
             <p>Use these in the fractal viewport:</p>
             <p><b>Left Click</b> and drag to pan</p>
             <p><b>Right Click</b> and drag to set the value of <b>c</b></p>
             <p><b>Scroll</b> to zoom in or out on a location</p>
           </div>
-          <h2>Parameters</h2>
+          <div class="section-header">
+            <button class="collapse-button" name="parameters">▶</button>
+            <h2>Parameters</h2>
+          </div>
           <div id="parameters">
             <p>Use these as variables in your equations:</p>
             <p><b>z</b> iteration variable</p>
@@ -135,7 +144,10 @@
             <p><b>t</b> current time (imaginary part = 0)</p>
             <p><b>c</b> mouse coordinates</p>
           </div>
-          <h2>Presets</h2>
+          <div class="section-header">
+            <button class="collapse-button" name="presets">▶</button>
+            <h2>Presets</h2>
+          </div>
           <div id="presets">
             <button class="preset-button" id="time-julia-set">Time Julia Set</button>
             <button class="preset-button" id="mouse-julia-set">Mouse Julia Set</button>
@@ -172,6 +184,7 @@
       </div>
 
       <div class="fractal-canvas">
+        <button id="panel-collapse-button">▶</button>
         <canvas id="webgpu-canvas"></canvas>
       </div>
     </div>
