added color map buttons

--- a/index.html
+++ b/index.html
@@ -145,6 +145,15 @@
             <p><b>c</b> mouse coordinates</p>
           </div>
           <div class="section-header">
+            <button class="collapse-button" name="color-maps">▶</button>
+            <h2>Color Maps</h2>
+          </div>
+          <div id="color-maps">
+            <button class="color-map-button" id="green">Green</button>
+            <button class="color-map-button" id="rainbow">Rainbow</button>
+            <button class="color-map-button" id="viridis">Viridis</button>
+          </div>
+          <div class="section-header">
             <button class="collapse-button" name="presets">▶</button>
             <h2>Presets</h2>
           </div>
